@@ -113,10 +113,8 @@ function ping_any_host(id)
 	return false;
 }
 
-function findFeaturesIntersection(selectFeature, feature)
+function findFeaturesIntersection(selectFeature, feature, featureLonLat)
 {
-	var featureLonLat = new OpenLayers.LonLat(feature.data.lon, feature.data.lat);
-	featureLonLat.transform(lmsProjection, map.getProjectionObject());
 	var featurePixel = map.getPixelFromLonLat(featureLonLat);
 	var features = [];
 	for (var i in selectFeature.layers) {
@@ -133,6 +131,8 @@ function findFeaturesIntersection(selectFeature, feature)
 			}
 		}
 	}
+	if (!features.length)
+		features.push(feature);
 	return features;
 }
 
@@ -236,7 +236,7 @@ function createMap(deviceArray, devlinkArray, nodeArray, nodelinkArray, selectio
 			);
 			devlinks.push(new OpenLayers.Feature.Vector(
 				new OpenLayers.Geometry.LineString(points),
-				null, linkstyles[devlinkArray[i].type]));
+				devlinkArray[i], linkstyles[devlinkArray[i].type]));
 		}
 
 	var devlinklayer = new OpenLayers.Layer.Vector("Device Links");
@@ -273,7 +273,7 @@ function createMap(deviceArray, devlinkArray, nodeArray, nodelinkArray, selectio
 				);
 			nodelinks.push(new OpenLayers.Feature.Vector(
 				new OpenLayers.Geometry.LineString(points),
-				null, linkstyles[nodelinkArray[i].type]));
+				nodelinkArray[i], linkstyles[nodelinkArray[i].type]));
 		}
 
 	var nodelinklayer = new OpenLayers.Layer.Vector("Node Links");
@@ -284,7 +284,7 @@ function createMap(deviceArray, devlinkArray, nodeArray, nodelinkArray, selectio
 	map.addLayer(nodelayer);
 	map.addLayer(nodelinklayer);
 
-	var highlightlayer = new OpenLayers.Control.SelectFeature([devicelayer, nodelayer], {
+	var highlightlayer = new OpenLayers.Control.SelectFeature([devicelayer, devlinklayer, nodelayer, nodelinklayer], {
 		hover: true,
 		highlightOnly: true,
 		clickout: false,
@@ -292,24 +292,35 @@ function createMap(deviceArray, devlinkArray, nodeArray, nodelinkArray, selectio
 		multiple: false,
 		eventListeners: {
 			"featurehighlighted": function(e) {
-				var map = this.map;
-				var feature = e.feature;
 				if (mappopup == null)
 				{
-					var features = findFeaturesIntersection(this, feature);
+					var map = this.map;
+					var feature = e.feature;
+					var featureLonLat, mapLonLat;
+					if (feature.geometry.CLASS_NAME == "OpenLayers.Geometry.Point") {
+						featureLonLat = new OpenLayers.LonLat(feature.data.lon, feature.data.lat);
+						featureLonLat.transform(lmsProjection, map.getProjectionObject());
+						mapLonLat = featureLonLat.clone();
+					}
+					else {
+						featureLonLat = map.getLonLatFromViewPortPx(this.handlers.feature.evt.xy);
+						mapLonLat = featureLonLat.clone();
+						mapLonLat.transform(map.getProjectionObject(), lmsProjection).transform(lmsProjection, map.getProjectionObject());
+					}
+					var features = findFeaturesIntersection(this, feature, featureLonLat);
 					var content = '<div class="lmsMapPopupContents">';
 					for (var i in features) {
-						content += '<div class="lmsMapPopupName">' + features[i].data.name + '</div>'
-							+ (features[i].data.ipaddr.length ? 
-								'<div class="lmsMapPopupAddress">' + features[i].data.ipaddr.replace(/,/g, 
-									'</div><div class="lmsMapPopupAddress">') + '</div>'
-								: '');
+						if (features[i].geometry.CLASS_NAME == "OpenLayers.Geometry.Point")
+							content += '<div class="lmsMapPopupName">' + features[i].data.name + '</div>'
+								+ (features[i].data.ipaddr.length ? 
+									'<div class="lmsMapPopupAddress">' + features[i].data.ipaddr.replace(/,/g, 
+										'</div><div class="lmsMapPopupAddress">') + '</div>'
+									: '');
+						else
+							content += '<span class="bold">' + features[i].data.typename + '<br>' + features[i].data.speedname + '</span>';
 					}
 					content += '</div>';
-					mappopup = new OpenLayers.Popup.Anchored(null,
-						new OpenLayers.LonLat(feature.data.lon, feature.data.lat)
-							.transform(lmsProjection, map.getProjectionObject()),
-						new OpenLayers.Size(10, 10), content);
+					mappopup = new OpenLayers.Popup.Anchored(null, mapLonLat, new OpenLayers.Size(10, 10), content);
 					mappopup.setOpacity(0.8);
 					mappopup.closeOnMove = true;
 					map.addPopup(mappopup);
@@ -341,13 +352,12 @@ function createMap(deviceArray, devlinkArray, nodeArray, nodelinkArray, selectio
 
 	if (selection)
 	{
-		var selectlayer = new OpenLayers.Control.SelectFeature([devicelayer, nodelayer], {
+		var selectlayer = new OpenLayers.Control.SelectFeature([devlinklayer, nodelinklayer, devicelayer, nodelayer], {
 			clickout: true, toggle: false,
 			multiple: true, hover: false,
 			toggleKey: "ctrlKey", // ctrl key removes from selection
 			multipleKey: "shiftKey", // shift key adds to selection
 			onSelect: function(feature) {
-				//alert(feature);
 				var map = feature.layer.map;
 				if (mappopup)
 				{
@@ -355,54 +365,60 @@ function createMap(deviceArray, devlinkArray, nodeArray, nodelinkArray, selectio
 					mappopup = null;
 				}
 				selectedFeature = feature;
-				var featurepopup = new OpenLayers.Popup(null,
-					new OpenLayers.LonLat(feature.data.lon, feature.data.lat)
-						.transform(lmsProjection, map.getProjectionObject()),
-					new OpenLayers.Size(10, 10));
-				featurepopup.setOpacity(0.9);
-				//featurepopup.closeOnMove = true;
-				//featurepopup.keepInMap = true;
-				//featurepopup.panMapIfOutOfView = true;
-				var content = '<div class="lmsPopupTitleBar"><div class="lmsPopupTitle">Info</div>'
-					+ '<div id="' + featurepopup.id + '_popupCloseBox" class="olPopupCloseBox lmsPopupCloseBox">&nbsp;</div></div>'
-					+ '<div class="lmsInfoPopupContents">';
-				var features = findFeaturesIntersection(this, feature);
-				for (var i in features) {
-					content += '<div class="lmsInfoPopupName">' + features[i].data.name + '</div>';
-					if (features[i].data.type == 'netdevinfo') {
-						if (features[i].data.ipaddr.length) {
-							var ips = features[i].data.ipaddr.split(',');
-							var nodeids = features[i].data.nodeid.split(',');
-							for (var j in nodeids)
-								content += '<div class="lmsInfoPopupAddress"><a href="#" onclick="ping_host(\''
-								+ featurepopup.id + '\', \'' + ips[j] + '\')"><img src="img/ip.gif" alt="">&nbsp;'
-								+ ips[j] + '</a></div>';
-						}
-					} else
-						content += '<div class="lmsInfoPopupAddress"><a href="#" onclick="ping_host(\''
-							+ featurepopup.id + '\', \'' + features[i].data.ipaddr + '\')"><img src="img/ip.gif" alt="">&nbsp;'
-							+ features[i].data.ipaddr + '</a></div>';
-					content += '<div class="lmsInfoPopupDetails"><a href="?m=' + features[i].data.type + '&id=' + features[i].data.id + '">'
-						+ '<img src="img/info1.gif" alt="">&nbsp;Info</a></div>';
+				var featureLonLat;
+				if (feature.geometry.CLASS_NAME == "OpenLayers.Geometry.Point") {
+					featureLonLat = new OpenLayers.LonLat(feature.data.lon, feature.data.lat);
+					featureLonLat.transform(lmsProjection, map.getProjectionObject());
 				}
-				content += '</div>';
-				featurepopup.setContentHTML(content);
+				else 
+					featureLonLat = map.getLonLatFromViewPortPx(this.handlers.feature.evt.xy);
+				var features = findFeaturesIntersection(this, feature, featureLonLat);
+				if (features.length > 1 || features[0].geometry.CLASS_NAME == "OpenLayers.Geometry.Point") {
+					var featurepopup = new OpenLayers.Popup(null, featureLonLat, new OpenLayers.Size(10, 10));
+					featurepopup.setOpacity(0.9);
+					//featurepopup.closeOnMove = true;
+					//featurepopup.keepInMap = true;
+					//featurepopup.panMapIfOutOfView = true;
+					var content = '<div class="lmsPopupTitleBar"><div class="lmsPopupTitle">Info</div>'
+						+ '<div id="' + featurepopup.id + '_popupCloseBox" class="olPopupCloseBox lmsPopupCloseBox">&nbsp;</div></div>'
+						+ '<div class="lmsInfoPopupContents">';
+					for (var i in features) {
+						content += '<div class="lmsInfoPopupName">' + features[i].data.name + '</div>';
+						if (features[i].data.type == 'netdevinfo') {
+							if (features[i].data.ipaddr.length) {
+								var ips = features[i].data.ipaddr.split(',');
+								var nodeids = features[i].data.nodeid.split(',');
+								for (var j in nodeids)
+									content += '<div class="lmsInfoPopupAddress"><a href="#" onclick="ping_host(\''
+									+ featurepopup.id + '\', \'' + ips[j] + '\')"><img src="img/ip.gif" alt="">&nbsp;'
+									+ ips[j] + '</a></div>';
+							}
+						} else
+							content += '<div class="lmsInfoPopupAddress"><a href="#" onclick="ping_host(\''
+								+ featurepopup.id + '\', \'' + features[i].data.ipaddr + '\')"><img src="img/ip.gif" alt="">&nbsp;'
+								+ features[i].data.ipaddr + '</a></div>';
+						content += '<div class="lmsInfoPopupDetails"><a href="?m=' + features[i].data.type + '&id=' + features[i].data.id + '">'
+							+ '<img src="img/info1.gif" alt="">&nbsp;Info</a></div>';
+					}
+					content += '</div>';
+					featurepopup.setContentHTML(content);
 
-				map.addPopup(featurepopup);
+					map.addPopup(featurepopup);
 
-				var dragpopup = new OpenLayers.Control.DragPopup(featurepopup, { feature: feature });
-				map.addControl(dragpopup);
+					var dragpopup = new OpenLayers.Control.DragPopup(featurepopup, { feature: feature });
+					map.addControl(dragpopup);
 
-				featurepopup.div.style.overflow = 'visible';
-				featurepopup.div.style.width = 'auto';
-				featurepopup.div.style.height = 'auto';
-				featurepopup.groupDiv.style.overflow = 'visible';
-				featurepopup.groupDiv.style.width = 'auto';
-				featurepopup.groupDiv.style.height = 'auto';
-				featurepopup.contentDiv.style.width = 'auto';
-				featurepopup.contentDiv.style.heigh = 'auto';
-				//featurepopup.updateSize();
-				feature.popup = featurepopup;
+					featurepopup.div.style.overflow = 'visible';
+					featurepopup.div.style.width = 'auto';
+					featurepopup.div.style.height = 'auto';
+					featurepopup.groupDiv.style.overflow = 'visible';
+					featurepopup.groupDiv.style.width = 'auto';
+					featurepopup.groupDiv.style.height = 'auto';
+					featurepopup.contentDiv.style.width = 'auto';
+					featurepopup.contentDiv.style.heigh = 'auto';
+					//featurepopup.updateSize();
+					feature.popup = featurepopup;
+				}
 			},
 			onUnselect: function(feature) {
 				//map.removePopup(feature.popup);
