@@ -45,7 +45,7 @@ if ($devices)
 
 	$devids = implode(',', array_keys($devices));
 
-	$devlinks = $DB->GetAll('SELECT src, dst, type FROM netlinks WHERE src IN ('.$devids.') AND dst IN ('.$devids.')');
+	$devlinks = $DB->GetAll('SELECT src, dst, type, speed FROM netlinks WHERE src IN ('.$devids.') AND dst IN ('.$devids.')');
 	if ($devlinks)
 		foreach ($devlinks as $devlinkidx => $devlink)
 		{
@@ -53,6 +53,8 @@ if ($devices)
 			$devlinks[$devlinkidx]['srclon'] = $devices[$devlink['src']]['lon'];
 			$devlinks[$devlinkidx]['dstlat'] = $devices[$devlink['dst']]['lat'];
 			$devlinks[$devlinkidx]['dstlon'] = $devices[$devlink['dst']]['lon'];
+			$devlinks[$devlinkidx]['typename'] = trans("Link type:")." ".$LINKTYPES[$devlink['type']];
+			$devlinks[$devlinkidx]['speedname'] = trans("Link speed:")." ".$LINKSPEEDS[$devlink['speed']];
 		}
 }
 
@@ -75,7 +77,7 @@ if ($nodes)
 
 	if ($devices)
 	{
-		$nodelinks = $DB->GetAll('SELECT n.id AS nodeid, netdev, linktype AS type FROM nodes n WHERE netdev > 0 AND ownerid > 0 
+		$nodelinks = $DB->GetAll('SELECT n.id AS nodeid, netdev, linktype AS type, linkspeed AS speed FROM nodes n WHERE netdev > 0 AND ownerid > 0 
 			AND n.id IN ('.$nodeids.') AND netdev IN ('.$devids.')');
 		if ($nodelinks)
 			foreach ($nodelinks as $nodelinkidx => $nodelink)
@@ -84,6 +86,8 @@ if ($nodes)
 				$nodelinks[$nodelinkidx]['nodelon'] = $nodes[$nodelink['nodeid']]['lon'];
 				$nodelinks[$nodelinkidx]['netdevlat'] = $devices[$nodelink['netdev']]['lat'];
 				$nodelinks[$nodelinkidx]['netdevlon'] = $devices[$nodelink['netdev']]['lon'];
+				$nodelinks[$nodelinkidx]['typename'] = trans("Link type:")." ".$LINKTYPES[$nodelink['type']];
+				$nodelinks[$nodelinkidx]['speedname'] = trans("Link speed:")." ".$LINKSPEEDS[$nodelink['speed']];
 			}
 	}
 }
