@@ -96,6 +96,7 @@ version ? (????-??-??):
   - added link speed for netlinks and nodelinks [chilan]
   - additional tariff types to select (phone, tv) [chilan]
   - uke report support for service types [chilan]
+  - netdevmap: show link properties in tooltip [chilan]
 
 version 1.11.13 Dira (2011-04-07)
 
